Приведено в соответствие с разбором HW6